Book form with client side validation

--- a/BookListRazor/Pages/BookList/Index.cshtml
+++ b/BookListRazor/Pages/BookList/Index.cshtml
@@ -4,5 +4,13 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Book List</h1>
+<br />
+<div class="container row">
+    <div class="col-6">
+        <h2 class="text-info">Book List</h2>
+    </div>
+    <div class="col-6 text-right">
+        <a asp-page="Create" class="btn btn-primary">Create New Book</a>
+    </div>
+</div>
 
